@@ -25,6 +25,7 @@
 #define KEYMAP_SECTION_VIEWER "viewer"
 #define KEYMAP_SECTION_VIEWER_HEX "viewer:hex"
 #define KEYMAP_SECTION_DIFFVIEWER "diffviewer"
+#define KEYMAP_SECTION_CMDVIEW "cmdview" //WIN32
 
 #define KEYMAP_SHORTCUT_LENGTH 32       /* FIXME: is 32 bytes enough for shortcut? */
 
