@@ -51,6 +51,9 @@
 #ifdef ENABLE_SUBSHELL
 #include "subshell/subshell.h"
 #endif
+#ifdef ENABLE_CMDVIEW //WIN32
+#include "cmdview/cmdview.h"
+#endif
 #include "setup.h"              /* clear_before_exec */
 
 #include "execute.h"
@@ -343,7 +346,12 @@ do_executev (const char *shell, int flags, char *const argv[])
             printf ("\r\n");
             fflush (stdout);
         }
+#ifdef ENABLE_CMDVIEW //WIN32
+        if (mc_global.tty.console_flag != '\0' && 
+                (mc_global.cmdview_visible || output_lines != 0) && mc_global.keybar_visible)
+#else
         if (mc_global.tty.console_flag != '\0' && output_lines != 0 && mc_global.keybar_visible)
+#endif
         {
             putchar ('\n');
             fflush (stdout);
@@ -469,6 +477,14 @@ toggle_subshell (void)
         message_flag = FALSE;
         return;
     }
+
+#ifdef ENABLE_CMDVIEW //WIN32
+    if (mc_global.tty.console_flag != '\0' && !mc_global.tty.use_subshell && mc_global.use_cmdview)
+    {
+        if (cmdview_cmd ())
+            return;
+    }
+#endif
 
     channels_down ();
     disable_mouse ();
