@@ -61,7 +61,7 @@ void panels_split_equal (void);
 void panels_split_more (void);
 void panels_split_less (void);
 void destroy_panels (void);
-void setup_cmdline (void);
+void setup_cmdline (const Widget * widget); //ENABLE_CMDVIEW/WIN32
 void create_panel (int num, panel_view_mode_t type);
 void swap_panels (void);
 panel_view_mode_t get_panel_type (int idx);
